base/init/files/iptables
# Generated by iptables-save v1.4.7 on Fri Dec 15 15:17:55 2017
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -s 122.224.197.34/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 119.90.35.133:443 
-A PREROUTING -s 122.224.197.35/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 119.90.35.133:443 
-A PREROUTING -s 222.46.20.168/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 119.90.35.133:443 
-A PREROUTING -s 192.168.6.9/32 -d 192.168.6.188/32 -p tcp -m tcp --dport 9996 -j DNAT --to-destination 192.168.0.253:8888 
-A PREROUTING -s 192.168.110.233/32 -d 192.168.19.202/32 -p tcp -m tcp --dport 9998 -j DNAT --to-destination 192.168.0.253:8888 
-A PREROUTING -s 106.3.33.11/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 7092 -j DNAT --to-destination 192.168.0.182:80 
-A PREROUTING -s 192.168.110.232/32 -d 192.168.19.202/32 -p tcp -m tcp --dport 7080 -j DNAT --to-destination 192.168.0.81:80 
-A PREROUTING -s 106.3.33.11/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 7080 -j DNAT --to-destination 192.168.0.81:80 
-A PREROUTING -s 106.3.33.11/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 7082 -j DNAT --to-destination 192.168.110.11:8012 
-A PREROUTING -s 106.3.33.11/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 7081 -j DNAT --to-destination 192.168.1.166:8012 
-A PREROUTING -s 192.168.110.148/32 -d 192.168.19.202/32 -p tcp -m tcp --dport 8010 -j DNAT --to-destination 192.168.8.178:8010 
-A PREROUTING -d 192.168.0.61/32 -p tcp -m tcp --dport 8123 -j DNAT --to-destination 192.168.0.112:8123 
-A PREROUTING -d 122.224.197.39/32 -p udp -m udp --dport 500 -j DNAT --to-destination 23.248.162.153:500 
-A PREROUTING -d 122.224.197.39/32 -p udp -m udp --dport 4500 -j DNAT --to-destination 23.248.162.153:4500 
-A PREROUTING -d 122.224.197.39/32 -p tcp -m tcp --dport 1723 -j DNAT --to-destination 45.33.55.161:1723 
-A PREROUTING -d 122.224.197.39/32 -p tcp -m tcp --dport 2003 -j DNAT --to-destination 45.33.55.161:2003 
-A PREROUTING -d 122.224.197.39/32 -p tcp -m tcp --dport 2002 -j DNAT --to-destination 106.75.136.31:2002 
-A PREROUTING -s 183.136.237.180/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 11000 -j DNAT --to-destination 192.168.0.13:8000 
-A PREROUTING -s 183.136.237.180/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 11001 -j DNAT --to-destination 192.168.0.13:8036 
-A PREROUTING -s 183.136.237.179/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 11002 -j DNAT --to-destination 192.168.0.13:8000 
-A PREROUTING -s 183.136.237.179/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 11003 -j DNAT --to-destination 192.168.0.13:8036 
-A PREROUTING -s 183.136.237.180/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 11004 -j DNAT --to-destination 192.168.110.250:6195 
-A PREROUTING -d 122.224.197.39/32 -p tcp -m tcp --dport 89 -j DNAT --to-destination 192.168.112.146:89 
-A POSTROUTING -d 119.90.35.133/32 -p tcp -m tcp --dport 443 -j SNAT --to-source 122.224.197.39 
-A POSTROUTING -d 192.168.0.253/32 -p tcp -m tcp --dport 8888 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 192.168.0.182/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 192.168.0.81/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 192.168.110.11/32 -p tcp -m tcp --dport 8012 -j SNAT --to-source 192.168.19.202 
-A POSTROUTING -d 192.168.1.166/32 -p tcp -m tcp --dport 8012 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 192.168.8.178/32 -p tcp -m tcp --dport 8010 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 192.168.0.112/32 -p tcp -m tcp --dport 8123 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 23.248.162.153/32 -j SNAT --to-source 122.224.197.39 
-A POSTROUTING -d 45.33.55.161/32 -j SNAT --to-source 122.224.197.39 
-A POSTROUTING -d 106.75.136.31/32 -j SNAT --to-source 122.224.197.39 
-A POSTROUTING -d 192.168.112.146/32 -j SNAT --to-source 192.168.112.115 
-A POSTROUTING -d 192.168.0.13/32 -j SNAT --to-source 192.168.0.61 
-A POSTROUTING -d 192.168.110.250/32 -j SNAT --to-source 192.168.19.202 
-A POSTROUTING -d 192.168.1.166/32 -j SNAT --to-source 192.168.0.61 
COMMIT
# Completed on Fri Dec 15 15:17:55 2017
# Generated by iptables-save v1.4.7 on Fri Dec 15 15:17:55 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -s 192.168.8.0/24 -d 192.168.0.61/32 -p tcp -m multiport --dports 9527 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -d 192.168.0.61/32 -p tcp -m multiport --dports 9527 -j ACCEPT 
-A INPUT -s 115.238.42.51/32 -d 122.224.197.39/32 -p tcp -m tcp --dport 8080 -m state --state NEW -m comment --comment "xuxiaohang sync web download" -j ACCEPT 
-A INPUT -s 192.168.0.187/32 -p tcp -m multiport --sports 8087 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "BASE: trace" -j ACCEPT 
-A INPUT -d 192.168.12.88/32 -p tcp -m multiport --dports 80,443 -j DROP 
-A INPUT -d 192.168.6.188/32 -p tcp -m multiport --dports 80,443 -j DROP 
-A INPUT -d 192.168.0.0/24 -p tcp -m multiport --dports 8002,8008,8100 -j ACCEPT 
-A INPUT -s 192.168.0.182/32 -d 192.168.0.61/32 -p tcp -m multiport --dports 3306 -j ACCEPT 
-A INPUT -d 192.168.0.61/32 -p icmp -j ACCEPT 
-A INPUT -d 192.168.0.61/32 ! -i lo -p tcp -m multiport ! --dports 80,443,8730 -j DROP 
-A INPUT -d 192.168.0.61/32 ! -p tcp -j DROP 
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "BASE: trace" -j ACCEPT 
-A INPUT -i lo -m comment --comment "BASE: lo" -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -m comment --comment "BASE: icmp" -j ACCEPT 
-A INPUT -s 10.0.0.0/8 -m comment --comment "BASE: inner net" -j ACCEPT 
-A INPUT -s 172.16.0.0/23 -m comment --comment "BASE: inner net" -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -m comment --comment "BASE: inner net" -j ACCEPT 
-A INPUT -s 222.46.20.168/32 -p tcp -m tcp -m multiport --dports 22,8140,8730,20460,20461 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 115.236.52.66/32 -p tcp -m tcp -m multiport --dports 22,8140,8730,20460,20461 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 122.224.197.34/32 -p tcp -m tcp -m multiport --dports 22,8140,8730,20460,20461 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 122.224.197.40/32 -p tcp -m tcp -m multiport --dports 22,8140,8730,20460,20461 -m comment --comment "BASE: vpn" -j ACCEPT 
-A INPUT -s 222.46.20.168/32 -p udp -m udp -m multiport --dports 53,123 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 115.236.52.66/32 -p udp -m udp -m multiport --dports 53,123 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 122.224.197.34/32 -p udp -m udp -m multiport --dports 53,123 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 122.224.197.37/32 -p tcp -m tcp -m multiport --dports 22,8140,8730,20460,20461 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 122.224.197.37/32 -p udp -m udp -m multiport --dports 53,123 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 222.73.95.106/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 112.65.240.116/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 106.3.33.11/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 119.90.39.172/32 -p tcp -m tcp --dport 20464 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 52.78.208.31/32 -p tcp -m tcp --dport 20464 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 222.73.95.100/32 -p tcp -m tcp --dport 20464 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 119.28.65.174/32 -p tcp -m tcp --dport 20464 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 119.28.60.144/32 -p tcp -m tcp --dport 20464 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 122.224.197.39/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 23.248.162.153/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -s 119.28.60.144/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A INPUT -p tcp -m set --match-set ccip src -m multiport --dports 80,443,8888,8730,8731 -j ACCEPT 
-A INPUT -s 113.105.247.0/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 1-1-1:  广东-顺德-电信" -j ACCEPT 
-A INPUT -s 113.105.224.0/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 1-1-2:  广东-顺德-电信" -j ACCEPT 
-A INPUT -s 222.73.111.208/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-1:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.170.112/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-2:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.172.192/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-3:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 180.153.140.192/29 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-4:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 180.153.255.160/29 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-5:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 222.73.123.208/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-7:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 180.153.255.80/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-8:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 222.73.83.96/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-9:  上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.150.96/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-10: 上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.138.80/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-10: 上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.150.144/29 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-11: 上海-南汇-电信" -j ACCEPT 
-A INPUT -s 112.65.240.112/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-11: 上海-南汇-联通" -j ACCEPT 
-A INPUT -s 114.80.150.0/26 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-11: 上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.171.160/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-12: 上海-南汇-电信" -j ACCEPT 
-A INPUT -s 222.73.95.64/26 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-1-12: 上海-南汇-电信" -j ACCEPT 
-A INPUT -s 114.80.107.128/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 2-2-1:  上海-北艾-电信" -j ACCEPT 
-A INPUT -s 115.236.185.128/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 3-1-1:  杭州-梅花楼-电信" -j ACCEPT 
-A INPUT -s 183.136.237.176/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 3-2-1:  杭州-世纪城-电信" -j ACCEPT 
-A INPUT -s 183.136.223.168/29 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 3-2-2:  杭州-世纪城-电信" -j ACCEPT 
-A INPUT -s 115.231.110.176/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 3-2-3:  杭州-世纪城-电信" -j ACCEPT 
-A INPUT -s 122.224.72.192/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 3-3-1:  杭州-西溪-电信" -j ACCEPT 
-A INPUT -s 202.107.192.176/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 3-3-2:  杭州-西溪-电信" -j ACCEPT 
-A INPUT -s 59.175.132.224/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 4-1-1:  武汉-南苑-电信" -j ACCEPT 
-A INPUT -s 123.129.234.16/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 6-1-1:  济南-担山屯-联通" -j ACCEPT 
-A INPUT -s 123.129.207.32/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 6-1-2:  济南-担山屯-联通" -j ACCEPT 
-A INPUT -s 182.118.23.64/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 7-2-1:  郑州-花园路-联通" -j ACCEPT 
-A INPUT -s 125.39.17.208/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 8-1-1:  天津-华苑-联通" -j ACCEPT 
-A INPUT -s 125.39.115.80/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 8-1-2:  天津-华苑-联通" -j ACCEPT 
-A INPUT -s 125.39.237.160/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 8-1-3:  天津-华苑-联通" -j ACCEPT 
-A INPUT -s 111.161.79.216/29 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 8-1-4:  天津-华苑-联通" -j ACCEPT 
-A INPUT -s 125.39.17.128/26 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 8-1-5:  天津-华苑-联通" -j ACCEPT 
-A INPUT -s 218.60.12.32/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 10-1-1: 沈阳-915-联通" -j ACCEPT 
-A INPUT -s 218.60.12.104/29 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 10-1-2: 沈阳-915-联通" -j ACCEPT 
-A INPUT -s 218.60.54.128/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 10-2-1: 沈阳-滑翔-联通" -j ACCEPT 
-A INPUT -s 218.60.58.176/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 10-2-2: 沈阳-滑翔-联通" -j ACCEPT 
-A INPUT -s 218.60.58.48/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 10-2-3: 沈阳-滑翔-联通" -j ACCEPT 
-A INPUT -s 218.60.29.0/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 10-2-4: 沈阳-滑翔-联通" -j ACCEPT 
-A INPUT -s 123.103.17.144/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-2: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 106.3.41.96/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-2-1: 北京-数北-双线" -j ACCEPT 
-A INPUT -s 119.90.35.128/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-3: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 106.3.35.96/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-4: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 119.90.35.96/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-5: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 119.90.35.224/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-6: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 106.3.33.0/26 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-7: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 119.90.39.160/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-8: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 223.203.210.192/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-9: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 119.90.57.192/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-10: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 119.90.52.96/27 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 11-1-10: 北京-兆维-双线" -j ACCEPT 
-A INPUT -s 121.52.241.144/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 12-1-1: 杭州-世纪城-网通" -j ACCEPT 
-A INPUT -s 124.160.239.160/28 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 12-1-2: 杭州-世纪城-网通" -j ACCEPT 
-A INPUT -s 118.192.76.107/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 13-1-1: 北京-鹏博士-BGP" -j ACCEPT 
-A INPUT -s 221.238.254.40/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "BASE: 13-1-1: tmp" -j ACCEPT 
-A INPUT -s 123.57.188.115/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.104/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.101/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.126/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.128/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.135/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.80.156/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.80.14/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.92.28/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.80.106/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.80.104/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.138/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.119/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.116/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.148/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.110/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.153/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.136/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.103/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.146/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.139/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.122/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.93.157/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.148/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.93.35/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.81.130/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.241.100/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.93.41/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.81.146/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.91.217/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.133/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.125/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.169/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.159/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.158/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.150/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.172/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.186/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.182/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.155/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.11/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.190/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.142/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.193/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.104.235/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.1/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.170/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.107/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.104.8/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.176.57/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.24.241.170/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.42.40.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.0.58/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.154/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.216.156/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.163/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.177/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.167/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.147/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.140/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.173/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.155/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.181/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.164/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.67.238/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.40.254/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.215.13/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.144/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.169/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.191/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.113/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.165/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.176/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.16/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.82/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.43.196.240/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.131/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.187/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.188.10/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.112.19/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.82.151/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 125.39.17.210/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.150.64/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.81.26/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.186.54/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.95.109/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.71.240/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.72.138/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.98.68/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.187.111/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.185/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.156/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.14/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.18/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.1.28/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.160/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.150/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.177/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.145/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.0.13/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.182/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.192/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.163/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.184/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.161/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.190/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.15/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.2/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.207/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.188/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.196/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.198/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.206/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.183/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.152/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.119/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.180/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.205/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.128/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.106/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.159/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.204/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.211/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.148/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.192/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.163/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.184/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.161/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.190/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.15/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.2/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.207/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.188/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.196/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.198/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.206/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.183/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.152/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.119/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.180/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.205/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.128/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.106/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.159/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.204/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.211/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.148/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.54.67/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.81.183/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.196/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.149.11/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.192/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.90.70/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.54.61/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.149.136/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.80.3/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.148.99/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.194/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.80.100/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.89.161/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.122.210/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.90.85/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.90.83/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.81.181/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.54.67/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.81.183/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.196/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.149.11/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.192/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.90.70/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.54.61/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.149.136/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.80.3/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.148.99/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.194/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.80.100/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.89.161/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.122.210/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.90.85/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.90.83/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.81.181/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.76.17/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.36/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.76.156/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.76.166/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.232/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 101.200.88.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.146.179/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.94.252/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.94.5/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.14.70/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.119.234/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.226.167/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.94.72/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.119.42/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.193.152/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.119.173/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.109.54/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.92.46/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.189.41/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.119.28/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.49.219/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.171.7/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.119.235/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.186.203/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.171.212/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.76.17/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.36/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.76.156/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.76.166/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.232/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.53.58/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.146.189/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.23.33/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.146.216/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.53.50/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.33/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.67/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.75/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.44/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.87/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.92/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.81/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.86/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.56.80/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.124/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.40.60.241/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.177/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.40.249/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.40.214/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.40.38/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 121.40.62.28/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.40.4/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.157/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.20/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.182/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.159/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.0.96/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.91/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.115/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.175/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.1.174/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.14/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.20/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.182/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.159/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.0.96/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.91/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.180/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.115/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.175/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.1.174/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.14/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.41.174/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.208/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.40.95/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.228/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.201/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.219/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.104/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.197/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.170/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.27/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.223/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.234/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.209/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.244/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.29/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.27/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.212/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.101/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.214/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.20/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.25/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.243/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.249/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.33/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.199/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.102/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.181/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.219/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.44/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.226/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.242/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.40/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.5/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.205/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.47/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.18/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.35/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.216/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.39/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.28/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.237/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.131/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.248/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.208/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.122/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.202/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.37/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.231/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.46/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.65/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.60/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.49/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.236/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.50/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.172/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.61/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.53/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.5/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.215/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.41/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.52/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.48/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.82/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.66/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.76/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.36/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.50/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.37/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.4/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.235/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.234/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.218/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.83/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.7/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.69/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.42/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.31/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.228/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.22/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.24/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.3.217/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.26.2.60/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.87/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.58/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.84.9/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.108.219/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.88.174/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.4.238/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.220.219/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.191.156/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.45.200/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.156.107/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.215.218/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.176.25/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.193.51/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.194.95/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.234.59/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.97.237/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.233.88/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.150.86/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.152.120/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.170.106/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.128.121/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.65.188/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.186.51/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.149.124/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 112.126.85.63/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 203.69.246.36/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.37/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.38/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.39/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.40/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.34/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.33/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.41/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.43/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.77/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.79/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.67/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.68/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 203.69.246.69/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A INPUT -s 123.59.53.133/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.41.221/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.41.220/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.41.222/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.53.134/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 120.132.85.142/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.66.122/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.43.144/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.43.66/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.43.142/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.43.62/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.82.131/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.82.132/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 123.59.82.133/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ucloud" -j ACCEPT 
-A INPUT -s 112.126.85.84/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 117.121.42.86/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun" -j ACCEPT 
-A INPUT -s 117.121.42.26/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun" -j ACCEPT 
-A INPUT -s 117.121.42.125/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun pvp" -j ACCEPT 
-A INPUT -s 117.121.42.122/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun DBS" -j ACCEPT 
-A INPUT -s 117.121.42.123/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun LogicServer" -j ACCEPT 
-A INPUT -s 117.121.42.124/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun GWServer" -j ACCEPT 
-A INPUT -s 117.121.42.126/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun MServer" -j ACCEPT 
-A INPUT -s 117.121.42.84/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun CenterServer" -j ACCEPT 
-A INPUT -s 117.121.42.85/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun LoginServer" -j ACCEPT 
-A INPUT -s 116.213.213.248/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun RechargeServer" -j ACCEPT 
-A INPUT -s 116.213.213.193/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun LOGServer" -j ACCEPT 
-A INPUT -s 116.213.213.124/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun GWServer && PVP" -j ACCEPT 
-A INPUT -s 116.213.213.125/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun DBServer && Center" -j ACCEPT 
-A INPUT -s 116.213.213.128/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 kunlun Logic && Login && Match && Log" -j ACCEPT 
-A INPUT -s 120.55.243.235/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3 inner test" -j ACCEPT 
-A INPUT -s 101.201.140.187/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali wszzl" -j ACCEPT 
-A INPUT -s 101.201.140.108/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali wszzl" -j ACCEPT 
-A INPUT -s 123.57.39.225/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.38.107/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.131.19/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 182.92.78.211/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.50.106/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.56.133.191/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 123.57.155.169/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.55.193.138/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.55.242.44/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.55.192.171/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 120.55.242.36/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "ali" -j ACCEPT 
-A INPUT -s 115.159.4.104/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 115.159.110.43/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 115.159.104.169/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 115.159.76.171/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 182.254.244.80/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 115.159.104.179/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 115.159.73.95/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 182.254.243.127/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 115.159.104.201/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "allm3" -j ACCEPT 
-A INPUT -s 101.201.143.15/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "MSGO" -j ACCEPT 
-A INPUT -s 101.201.143.119/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "MSGO" -j ACCEPT 
-A INPUT -s 101.201.143.144/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "MSGO" -j ACCEPT 
-A INPUT -s 101.201.140.18/32 -p tcp -m multiport --dports 8888,8730 -m comment --comment "MSGO" -j ACCEPT 
-A INPUT -s 222.73.95.100/32 -p tcp -m tcp --dport 20464 -j ACCEPT 
-A INPUT -s 106.3.35.124/32 -p tcp -m tcp --dport 3306 -m state --state NEW -m comment --comment "apiserver by huangqin" -j ACCEPT 
-A INPUT -s 183.136.237.178/32 -p tcp -m tcp --dport 8001 -m state --state NEW -m comment --comment "huanghaizhen" -j ACCEPT 
-A INPUT -s 122.224.197.34/32 -p tcp -m tcp --dport 8001 -m state --state NEW -m comment --comment "huanghaizhen" -j ACCEPT 
-A INPUT -s 115.236.52.66/32 -p tcp -m tcp --dport 8001 -m state --state NEW -m comment --comment "huanghaizhen" -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5001 -m state --state NEW -m comment --comment "test" -j ACCEPT 
-A INPUT -s 183.134.107.200/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A INPUT -s 180.101.35.131/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A INPUT -s 180.101.35.130/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A INPUT -s 122.224.197.34/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 115.236.52.66/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: company whitelist" -j ACCEPT 
-A INPUT -s 222.46.20.168/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: company whitelist tietong" -j ACCEPT 
-A INPUT -s 122.224.197.40/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: vpn" -j ACCEPT 
-A INPUT -s 122.224.197.36/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: ligang" -j ACCEPT 
-A INPUT -s 122.224.197.35/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: ligang" -j ACCEPT 
-A INPUT -s 115.238.42.51/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: xuxiaohang" -j ACCEPT 
-A INPUT -s 218.75.38.242/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: zhibo" -j ACCEPT 
-A INPUT -s 218.75.38.243/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: wifi" -j ACCEPT 
-A INPUT -s 218.75.38.244/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: saman" -j ACCEPT 
-A INPUT -s 183.129.151.186/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: kefu dianxin" -j ACCEPT 
-A INPUT -s 222.46.21.111/32 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "BASE: kefu tietong" -j ACCEPT 
-A INPUT -s 192.168.19.0/24 -p tcp -m tcp -m multiport --dports 1080,1081 -m comment --comment "company base work inner net for fuck gfw" -j ACCEPT 
-A INPUT -s 106.3.33.10/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "to dataitf.17m3.com" -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 89 -j ACCEPT 
-A INPUT -s 106.3.35.124/32 -p tcp -m tcp --dport 8003 -j ACCEPT 
-A INPUT -s 122.224.197.34/32 -p tcp -m tcp -m multiport --dports 9020 -m comment --comment "access company ip " -j ACCEPT 
-A INPUT -s 122.224.197.34/32 -p tcp -m tcp -m multiport --dports 9080 -m comment --comment "access company ip " -j ACCEPT 
-A INPUT -s 58.215.139.89/32 -p tcp -m tcp -m multiport --dports 9020 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 58.215.139.89/32 -p tcp -m tcp -m multiport --dports 9080 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 122.192.68.89/32 -p tcp -m tcp -m multiport --dports 9020 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 122.192.68.89/32 -p tcp -m tcp -m multiport --dports 9080 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 221.238.24.39/32 -p tcp -m tcp -m multiport --dports 9020 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 221.238.24.39/32 -p tcp -m tcp -m multiport --dports 9080 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 125.39.1.39/32 -p tcp -m tcp -m multiport --dports 9020 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 125.39.1.39/32 -p tcp -m tcp -m multiport --dports 9080 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 120.36.156.166/32 -p tcp -m tcp -m multiport --dports 9080 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 120.36.156.166/32 -p tcp -m tcp -m multiport --dports 9020 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 192.30.255.112/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A INPUT -s 192.30.255.113/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A INPUT -s 121.40.60.241/32 -p tcp -m tcp -m multiport --dports 3306 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 151.139.105.17/32 -p tcp -m tcp -m multiport --dports 8730 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 161.202.196.182/32 -p tcp -m tcp -m multiport --dports 8730 -m comment --comment "access wangsu cdn ip " -j ACCEPT 
-A INPUT -s 110.88.223.157/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A INPUT -s 183.131.215.41/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A INPUT -s 110.88.223.156/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A INPUT -s 180.101.217.119/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 180.101.217.196/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 58.216.106.208/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 180.101.217.205/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 180.101.217.115/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 58.216.106.210/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 221.228.219.107/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 221.228.218.214/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 221.228.219.71/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 221.228.218.203/32 -m comment --comment "Refresh zhijian CDN" -j ACCEPT 
-A INPUT -s 54.206.41.249/32 -p tcp -m tcp -m multiport --dports 22,8140,8730,20460,20461 -m comment --comment "weiwei: vpn" -j ACCEPT 
-A INPUT -s 183.136.237.180/32 -p tcp -m tcp -m multiport --dports 11000,11001 -m comment --comment "new oa" -j ACCEPT 
-A INPUT -s 183.136.237.179/32 -p tcp -m tcp -m multiport --dports 11002,11003 -m comment --comment "new oa" -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8731 -m comment --comment "xgame server rsync" -j ACCEPT 
-A INPUT -s 47.88.195.47/32 -p tcp -m tcp --dport 20460 -m comment --comment "cyzz db " -j ACCEPT 
-A INPUT -s 115.231.24.219/32 -p tcp -m tcp -m comment --comment "update wangsu cdn" -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -m comment --comment "BASE: trace" -j ACCEPT 
-A FORWARD -s 122.224.197.34/32 -d 119.90.35.133/32 -p tcp -m tcp --dport 443 -m comment --comment "forward to tot login server" -j ACCEPT 
-A FORWARD -s 122.224.197.35/32 -d 119.90.35.133/32 -p tcp -m tcp --dport 443 -m comment --comment "forward to tot login server" -j ACCEPT 
-A FORWARD -s 222.46.20.168/32 -d 119.90.35.133/32 -p tcp -m tcp --dport 443 -m comment --comment "forward to tot login server" -j ACCEPT 
-A FORWARD -s 122.224.197.36/32 -d 119.90.35.133/32 -p tcp -m tcp --dport 443 -m comment --comment "forward to tot login server for ligang" -j ACCEPT 
-A FORWARD -s 106.3.33.11/32 -d 192.168.0.182/32 -p tcp -m tcp --dport 80 -m comment --comment "forward to PM inner" -j ACCEPT 
-A FORWARD -s 106.3.33.11/32 -d 192.168.1.166/32 -p tcp -m tcp --dport 8012 -m comment --comment "outer oa to inner rtx msg" -j ACCEPT 
-A FORWARD -s 106.3.33.11/32 -d 192.168.110.11/32 -p tcp -m tcp --dport 8012 -m comment --comment "outer oa to outer rtx msg" -j ACCEPT 
-A FORWARD -s 192.168.110.233/32 -d 192.168.0.253/32 -p tcp -m tcp --dport 8888 -m comment --comment "gm to mtd web gm" -j ACCEPT 
-A FORWARD -s 192.168.6.9/32 -d 192.168.0.253/32 -p tcp -m tcp --dport 8888 -m comment --comment "guanwang to mtd web gm" -j ACCEPT 
-A FORWARD -s 192.168.110.148/32 -d 192.168.8.178/32 -p tcp -m tcp --dport 8010 -m comment --comment "kdm3 to platform chatserver" -j ACCEPT 
-A FORWARD -d 192.168.0.112/32 -p tcp -m tcp --dport 8123 -m comment --comment "m3g test proxy" -j ACCEPT 
-A FORWARD -s 122.224.197.34/32 -p udp -m udp -m multiport --dports 500,4500 -j ACCEPT 
-A FORWARD -s 122.224.197.35/32 -p udp -m udp -m multiport --dports 500,4500 -j ACCEPT 
-A FORWARD -s 222.46.20.168/32 -p udp -m udp -m multiport --dports 500,4500 -j ACCEPT 
-A FORWARD -s 122.224.197.36/32 -p udp -m udp -m multiport --dports 500,4500 -j ACCEPT 
-A FORWARD -s 218.75.38.243/32 -p udp -m udp -m multiport --dports 500,4500 -j ACCEPT 
-A FORWARD -s 218.75.38.242/32 -p udp -m udp -m multiport --dports 500,4500 -j ACCEPT 
-A FORWARD -s 122.224.197.34/32 -p tcp -m tcp -m multiport --dports 2002,2003,1723 -j ACCEPT 
-A FORWARD -s 122.224.197.35/32 -p tcp -m tcp -m multiport --dports 2002,2003,1723 -j ACCEPT 
-A FORWARD -s 222.46.20.168/32 -p tcp -m tcp -m multiport --dports 2002,2003,1723 -j ACCEPT 
-A FORWARD -s 122.224.197.36/32 -p tcp -m tcp -m multiport --dports 2002,2003,1723 -j ACCEPT 
-A FORWARD -s 218.75.38.243/32 -p tcp -m tcp -m multiport --dports 2002,2003,1723 -j ACCEPT 
-A FORWARD -s 218.75.38.242/32 -p tcp -m tcp -m multiport --dports 2002,2003,1723 -j ACCEPT 
-A FORWARD -s 183.136.237.180/32 -d 192.168.0.13/32 -m comment --comment "new oa" -j ACCEPT 
-A FORWARD -s 183.136.237.179/32 -d 192.168.0.13/32 -m comment --comment "new oa" -j ACCEPT 
-A FORWARD -s 183.136.237.180/32 -d 192.168.110.250/32 -m comment --comment "new oa" -j ACCEPT 
-A FORWARD -s 192.168.112.146/32 -d 122.224.197.39/32 -m comment --comment "new oa" -j ACCEPT 
-A FORWARD -d 192.168.112.146/32 -j ACCEPT 
-A OUTPUT -d 111.230.214.107/32 -p tcp -m tcp --dport 443 -m comment --comment "to ido" -j ACCEPT 
-A OUTPUT -d 222.73.95.104/32 -p tcp -m tcp --dport 80 -m comment --comment "to ido" -j ACCEPT 
-A OUTPUT -s 192.168.0.61/32 -d 192.168.0.0/24 -p tcp -m tcp --sport 9527 -j ACCEPT 
-A OUTPUT -d 192.168.0.182/32 -j ACCEPT 
-A OUTPUT -d 223.203.210.0/24 -m state --state NEW -m comment --comment "mpt friend dr" -j ACCEPT 
-A OUTPUT -d 202.107.192.0/24 -m state --state NEW -m comment --comment "oa to coremail" -j ACCEPT 
-A OUTPUT -d 192.155.84.0/24 -m state --state NEW -m comment --comment "to vps" -j ACCEPT 
-A OUTPUT -d 222.73.95.76/32 -p tcp -m tcp -m multiport --dports 3306,3307 -m comment --comment "allow huanghaizhen to mstd log" -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A OUTPUT -d 183.131.9.186/32 -p tcp -m tcp --dport 21 -m comment --comment "platform client to dilian ftp" -j ACCEPT 
-A OUTPUT -d 180.163.248.237/32 -p tcp -m tcp --dport 21 -m comment --comment "platform client to 360 ftp" -j ACCEPT 
-A OUTPUT -d 192.168.0.187/32 -p tcp -m multiport --dports 8087 -j ACCEPT 
-A OUTPUT -d 192.168.0.81/32 -p tcp -m tcp --dport 80 -m comment --comment "allow BOSS to OA" -j ACCEPT 
-A OUTPUT -d 192.168.0.94/32 -p tcp -m tcp --dport 80 -m comment --comment "allow connect m3guo logs" -j ACCEPT 
-A OUTPUT -d 192.168.9.0/24 -m state --state NEW -m comment --comment "not allow to inner net" -j DROP 
-A OUTPUT -d 192.168.8.0/24 -m state --state NEW -m comment --comment "not allow to inner net" -j DROP 
-A OUTPUT -d 192.168.7.0/24 -m state --state NEW -m comment --comment "not allow to inner net" -j DROP 
-A OUTPUT -d 192.168.1.0/24 -m state --state NEW -m comment --comment "not allow to inner net" -j DROP 
-A OUTPUT -d 192.168.0.0/24 -m state --state NEW -m comment --comment "not allow to inner net" -j DROP 
-A OUTPUT -m state --state RELATED,ESTABLISHED -m comment --comment "BASE: trace" -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -m comment --comment "BASE: trace" -j ACCEPT 
-A OUTPUT -o lo -m comment --comment "BASE: lo" -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -m comment --comment "BASE: icmp" -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -m comment --comment "BASE: icmp" -j ACCEPT 
-A OUTPUT -d 10.0.0.0/8 -m comment --comment "BASE: inner net" -j ACCEPT 
-A OUTPUT -d 172.16.0.0/23 -m comment --comment "BASE: inner net" -j ACCEPT 
-A OUTPUT -d 192.168.0.0/16 -m comment --comment "BASE: inner net" -j ACCEPT 
-A OUTPUT -d 222.73.95.106/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 112.65.240.116/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 106.3.33.11/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 119.90.39.172/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 52.78.208.31/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 222.73.95.100/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 119.28.65.174/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 119.28.60.144/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 122.224.197.39/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 23.248.162.153/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 119.28.60.144/32 -m comment --comment "BASE: jumper" -j ACCEPT 
-A OUTPUT -d 208.67.222.222/32 -p udp -m udp --dport 53 -m comment --comment "BASE: dns resolve" -j ACCEPT 
-A OUTPUT -d 208.67.222.220/32 -p udp -m udp --dport 53 -m comment --comment "BASE: dns resolve" -j ACCEPT 
-A OUTPUT -d 220.181.5.30/32 -p udp -m udp --dport 53 -m comment --comment "BASE: dns resolve" -j ACCEPT 
-A OUTPUT -d 8.8.8.8/32 -p udp -m udp --dport 53 -m comment --comment "BASE: dns resolve" -j ACCEPT 
-A OUTPUT -d 114.114.114.114/32 -p udp -m udp --dport 53 -m comment --comment "BASE: dns resolve" -j ACCEPT 
-A OUTPUT -p tcp -m tcp -m multiport --dports 21,80,443 -m owner --uid-owner root -m state --state NEW -m comment --comment "BASE: yum" -j ACCEPT 
-A OUTPUT -m set --match-set ccip dst -j ACCEPT 
-A OUTPUT -d 113.105.247.0/28 -m comment --comment "BASE: 1-1-1:  广东-顺德-电信" -j ACCEPT 
-A OUTPUT -d 113.105.224.0/28 -m comment --comment "BASE: 1-1-2:  广东-顺德-电信" -j ACCEPT 
-A OUTPUT -d 222.73.111.208/28 -m comment --comment "BASE: 2-1-1:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.170.112/28 -m comment --comment "BASE: 2-1-2:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.172.192/28 -m comment --comment "BASE: 2-1-3:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 180.153.140.192/29 -m comment --comment "BASE: 2-1-4:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 180.153.255.160/29 -m comment --comment "BASE: 2-1-5:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 222.73.123.208/28 -m comment --comment "BASE: 2-1-7:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 180.153.255.80/28 -m comment --comment "BASE: 2-1-8:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 222.73.83.96/27 -m comment --comment "BASE: 2-1-9:  上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.171.160/27 -m comment --comment "BASE: 2-1-12: 上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.150.96/28 -m comment --comment "BASE: 2-1-10: 上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.150.144/29 -m comment --comment "BASE: 2-1-11: 上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 112.65.240.112/28 -m comment --comment "BASE: 2-1-11: 上海-南汇-联通" -j ACCEPT 
-A OUTPUT -d 114.80.150.0/26 -m comment --comment "BASE: 2-1-11: 上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.171.160/27 -m comment --comment "BASE: 2-1-12: 上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 222.73.95.64/26 -m comment --comment "BASE: 2-1-12: 上海-南汇-电信" -j ACCEPT 
-A OUTPUT -d 114.80.107.128/28 -m comment --comment "BASE: 2-2-1:  上海-北艾-电信" -j ACCEPT 
-A OUTPUT -d 114.80.138.80/28 -m comment --comment "BASE: 2-2-1:  上海-北艾-电信" -j ACCEPT 
-A OUTPUT -d 115.236.185.128/28 -m comment --comment "BASE: 3-1-1:  杭州-梅花楼-电信" -j ACCEPT 
-A OUTPUT -d 183.136.237.176/28 -m comment --comment "BASE: 3-2-1:  杭州-世纪城-电信" -j ACCEPT 
-A OUTPUT -d 183.136.223.168/29 -m comment --comment "BASE: 3-2-2:  杭州-世纪城-电信" -j ACCEPT 
-A OUTPUT -d 115.231.110.176/28 -m comment --comment "BASE: 3-2-3:  杭州-世纪城-电信" -j ACCEPT 
-A OUTPUT -d 122.224.72.192/28 -m comment --comment "BASE: 3-3-1:  杭州-西溪-电信" -j ACCEPT 
-A OUTPUT -d 202.107.192.176/28 -m comment --comment "BASE: 3-3-2:  杭州-西溪-电信" -j ACCEPT 
-A OUTPUT -d 59.175.132.224/27 -m comment --comment "BASE: 4-1-1:  武汉-南苑-电信" -j ACCEPT 
-A OUTPUT -d 123.129.234.16/28 -m comment --comment "BASE: 6-1-1:  济南-担山屯-联通" -j ACCEPT 
-A OUTPUT -d 123.129.207.32/28 -m comment --comment "BASE: 6-1-2:  济南-担山屯-联通" -j ACCEPT 
-A OUTPUT -d 182.118.23.64/27 -m comment --comment "BASE: 7-2-1:  郑州-花园路-联通" -j ACCEPT 
-A OUTPUT -d 125.39.17.208/28 -m comment --comment "BASE: 8-1-1:  天津-华苑-联通" -j ACCEPT 
-A OUTPUT -d 125.39.115.80/28 -m comment --comment "BASE: 8-1-2:  天津-华苑-联通" -j ACCEPT 
-A OUTPUT -d 125.39.237.160/28 -m comment --comment "BASE: 8-1-3:  天津-华苑-联通" -j ACCEPT 
-A OUTPUT -d 111.161.79.216/29 -m comment --comment "BASE: 8-1-4:  天津-华苑-联通" -j ACCEPT 
-A OUTPUT -d 125.39.17.128/26 -m comment --comment "BASE: 8-1-5:  天津-华苑-联通" -j ACCEPT 
-A OUTPUT -d 218.60.12.32/28 -m comment --comment "BASE: 10-1-1: 沈阳-915-联通" -j ACCEPT 
-A OUTPUT -d 218.60.12.104/29 -m comment --comment "BASE: 10-1-2: 沈阳-915-联通" -j ACCEPT 
-A OUTPUT -d 218.60.54.128/28 -m comment --comment "BASE: 10-2-1: 沈阳-滑翔-联通" -j ACCEPT 
-A OUTPUT -d 218.60.58.176/28 -m comment --comment "BASE: 10-2-2: 沈阳-滑翔-联通" -j ACCEPT 
-A OUTPUT -d 218.60.58.48/28 -m comment --comment "BASE: 10-2-3: 沈阳-滑翔-联通" -j ACCEPT 
-A OUTPUT -d 218.60.29.0/27 -m comment --comment "BASE: 10-2-4: 沈阳-滑翔-联通" -j ACCEPT 
-A OUTPUT -d 123.103.17.144/28 -m comment --comment "BASE: 11-1-2: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 106.3.41.96/28 -m comment --comment "BASE: 11-2-1: 北京-数北-双线" -j ACCEPT 
-A OUTPUT -d 119.90.35.128/27 -m comment --comment "BASE: 11-1-3: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 106.3.35.96/27 -m comment --comment "BASE: 11-1-4: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 119.90.35.96/27 -m comment --comment "BASE: 11-1-5: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 119.90.35.224/27 -m comment --comment "BASE: 11-1-6: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 106.3.33.0/26 -m comment --comment "BASE: 11-1-7: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 119.90.39.160/27 -m comment --comment "BASE: 11-1-8: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 223.203.210.192/28 -m comment --comment "BASE: 11-1-9: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 119.90.57.192/27 -m comment --comment "BASE: 11-1-10: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 119.90.52.96/27 -m comment --comment "BASE: 11-1-10: 北京-兆维-双线" -j ACCEPT 
-A OUTPUT -d 121.52.241.144/28 -m comment --comment "BASE: 12-1-1: 杭州-世纪城-网通" -j ACCEPT 
-A OUTPUT -d 124.160.239.160/28 -m comment --comment "BASE: 12-1-2: 杭州-世纪城-网通" -j ACCEPT 
-A OUTPUT -d 118.192.76.107/32 -m comment --comment "BASE: 13-1-1: 北京-鹏博士-BGP" -j ACCEPT 
-A OUTPUT -d 221.238.254.40/32 -m comment --comment "BASE: 13-1-1: tmp" -j ACCEPT 
-A OUTPUT -d 123.57.188.115/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.104/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.101/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.126/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.128/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.135/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.80.156/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.80.14/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.92.28/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.80.106/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.80.104/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.138/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.119/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.116/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.148/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.110/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.153/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.136/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.103/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.146/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.139/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.122/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.93.157/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.148/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.93.35/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.81.130/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.241.100/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.93.41/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.81.146/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.91.217/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.133/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.125/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.169/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.159/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.158/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.150/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.172/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.186/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.182/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.155/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.11/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.190/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.142/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.193/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.104.235/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.1/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.170/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.107/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.104.8/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.176.57/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.24.241.170/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.42.40.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.0.58/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.154/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.216.156/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.163/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.177/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.167/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.147/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.140/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.173/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.155/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.181/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.164/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.67.238/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.40.254/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.215.13/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.144/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.169/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.191/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.113/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.165/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.176/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.16/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.82/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.43.196.240/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.131/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.187/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.188.10/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.112.19/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.82.151/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 125.39.17.210/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.150.64/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.81.26/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.186.54/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.95.109/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.71.240/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.72.138/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.98.68/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.187.111/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.185/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.156/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.14/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.18/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.1.28/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.160/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.150/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.177/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.145/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.0.13/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.182/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.192/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.163/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.184/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.161/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.190/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.15/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.2/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.207/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.188/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.196/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.198/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.206/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.183/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.152/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.119/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.180/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.205/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.128/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.106/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.159/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.204/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.211/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.148/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.171/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.208/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.165/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.192/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.163/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.184/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.161/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.190/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.15/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.2/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.207/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.188/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.196/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.198/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.206/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.183/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.152/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.119/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.180/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.205/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.128/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.106/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.159/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.204/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.211/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.148/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.54.67/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.81.183/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.196/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.149.11/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.192/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.90.70/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.54.61/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.149.136/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.80.3/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.148.99/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.194/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.80.100/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.89.161/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.122.210/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.90.85/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.90.83/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.81.181/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.54.67/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.81.183/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.196/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.149.11/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.192/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.90.70/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.54.61/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.149.136/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.80.3/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.148.99/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.194/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.80.100/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.89.161/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.122.210/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.90.85/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.90.83/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.81.181/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.76.17/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.36/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.76.156/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.76.166/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.232/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 101.200.88.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.146.179/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.94.252/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.94.5/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.14.70/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.119.234/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.226.167/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.94.72/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.119.42/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.119.173/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.109.54/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.92.46/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.189.41/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.119.28/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.49.219/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.171.7/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.119.235/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.186.203/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.171.212/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.193.152/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.76.17/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.36/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.76.156/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.76.166/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.232/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.53.58/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.146.189/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.23.33/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.146.216/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.53.50/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.33/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.67/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.75/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.44/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.87/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.92/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.81/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.86/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.56.80/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.124/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.40.60.241/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.177/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.40.249/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.40.214/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.40.38/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 121.40.62.28/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.40.4/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.157/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.157/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.20/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.182/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.159/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.0.96/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.91/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.115/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.175/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.1.174/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.14/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.20/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.182/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.159/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.0.96/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.91/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.180/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.115/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.175/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.1.174/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.14/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.41.174/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.208/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.40.95/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.228/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.201/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.219/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.104/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.197/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.170/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.27/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.223/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.234/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.209/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.244/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.29/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.27/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.212/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.101/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.214/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.20/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.25/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.243/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.249/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.33/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.199/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.102/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.181/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.219/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.44/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.226/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.242/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.40/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.5/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.205/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.47/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.18/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.35/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.216/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.39/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.28/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.237/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.131/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.248/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.208/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.122/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.202/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.37/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.231/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.46/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.65/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.60/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.49/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.236/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.50/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.172/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.61/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.53/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.5/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.2.215/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.41/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.52/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.48/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.82/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.66/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.76/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.36/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.50/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.37/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.4/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.235/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.234/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.26.3.218/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.83/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.7/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.69/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.42/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.31/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.228/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.87/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.58/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.84.9/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.108.219/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.88.174/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.4.238/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.220.219/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.191.156/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.45.200/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.156.107/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.215.218/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.176.25/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.193.51/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.194.95/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.234.59/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.97.237/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.233.88/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.150.86/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.152.120/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.170.106/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.128.121/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.65.188/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.186.51/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.149.124/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 112.126.85.63/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 203.69.246.36/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.37/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.38/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.39/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.40/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.34/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.33/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.41/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.43/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.77/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.79/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.67/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.68/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 203.69.246.69/32 -m comment --comment "mmasg tw feiliu" -j ACCEPT 
-A OUTPUT -d 123.59.53.133/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.41.221/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.41.220/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.41.222/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.53.134/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 120.132.85.142/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.66.122/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.43.144/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.43.66/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.43.142/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.43.62/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.82.131/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.82.132/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 123.59.82.133/32 -m comment --comment "ucloud" -j ACCEPT 
-A OUTPUT -d 112.126.85.84/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 117.121.42.86/32 -m comment --comment "allm3 kunlun" -j ACCEPT 
-A OUTPUT -d 117.121.42.26/32 -m comment --comment "allm3 kunlun" -j ACCEPT 
-A OUTPUT -d 117.121.42.125/32 -m comment --comment "allm3 kunlun pvp" -j ACCEPT 
-A OUTPUT -d 117.121.42.122/32 -m comment --comment "allm3 kunlun DBS" -j ACCEPT 
-A OUTPUT -d 117.121.42.123/32 -m comment --comment "allm3 kunlun LogicServer" -j ACCEPT 
-A OUTPUT -d 117.121.42.124/32 -m comment --comment "allm3 kunlun GWServer" -j ACCEPT 
-A OUTPUT -d 117.121.42.126/32 -m comment --comment "allm3 kunlun MatchServer" -j ACCEPT 
-A OUTPUT -d 117.121.42.84/32 -m comment --comment "allm3 kunlun CenterServer" -j ACCEPT 
-A OUTPUT -d 117.121.42.85/32 -m comment --comment "allm3 kunlun LoginServer" -j ACCEPT 
-A OUTPUT -d 116.213.213.248/32 -m comment --comment "allm3 kunlun RechargeServer" -j ACCEPT 
-A OUTPUT -d 116.213.213.193/32 -m comment --comment "allm3 kunlun LogServer" -j ACCEPT 
-A OUTPUT -d 116.213.213.124/32 -m comment --comment "allm3 kunlun Test GW && PVP" -j ACCEPT 
-A OUTPUT -d 116.213.213.125/32 -m comment --comment "allm3 kunlun Test DB && Center" -j ACCEPT 
-A OUTPUT -d 116.213.213.128/32 -m comment --comment "allm3 kunlun Test Logic && Login && PVP && Match" -j ACCEPT 
-A OUTPUT -d 120.55.243.235/32 -m comment --comment "allm3 inner test" -j ACCEPT 
-A OUTPUT -d 101.201.140.187/32 -m comment --comment "ali wszzl" -j ACCEPT 
-A OUTPUT -d 101.201.140.108/32 -m comment --comment "ali wszzl" -j ACCEPT 
-A OUTPUT -d 123.57.39.225/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.38.107/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.131.19/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 182.92.78.211/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.50.106/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.56.133.191/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 123.57.155.169/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.55.193.138/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.55.242.44/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.55.192.171/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 120.55.242.36/32 -m comment --comment "ali" -j ACCEPT 
-A OUTPUT -d 115.159.4.104/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 115.159.110.43/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 115.159.104.169/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 115.159.76.171/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 182.254.244.80/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 115.159.104.179/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 115.159.73.95/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 182.254.243.127/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 115.159.104.201/32 -m comment --comment "allm3" -j ACCEPT 
-A OUTPUT -d 101.201.143.15/32 -m comment --comment "MSGO" -j ACCEPT 
-A OUTPUT -d 101.201.143.119/32 -m comment --comment "MSGO" -j ACCEPT 
-A OUTPUT -d 101.201.143.144/32 -m comment --comment "MSGO" -j ACCEPT 
-A OUTPUT -d 101.201.140.18/32 -m comment --comment "MSGO" -j ACCEPT 
-A OUTPUT -d 222.73.95.100/32 -p tcp -m tcp --dport 20465 -j ACCEPT 
-A OUTPUT -d 223.203.210.61/32 -p tcp -m tcp -m multiport --dports 80,8081 -m comment --comment "ams to tjl" -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 20460,20461 -m comment --comment "to sshd" -j ACCEPT 
-A OUTPUT -d 192.168.12.0/24 -m comment --comment "to inner net" -j ACCEPT 
-A OUTPUT -d 192.168.2.0/24 -m comment --comment "to inner net" -j ACCEPT 
-A OUTPUT -d 123.150.190.30/32 -m comment --comment "tot CDN FTP, DianLian" -j ACCEPT 
-A OUTPUT -d 183.131.9.186/32 -m comment --comment "tot CDN FTP, DianLian" -j ACCEPT 
-A OUTPUT -d 183.134.107.200/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 183.131.9.189/32 -p tcp -m tcp --dport 21 -m comment --comment "access dl cdn" -j ACCEPT 
-A OUTPUT -d 223.203.210.51/32 -m comment --comment "tot CDN FTP, MSTD.ini" -j ACCEPT 
-A OUTPUT -d 180.101.35.131/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 180.101.35.130/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 180.101.35.130/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 180.101.35.131/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 180.101.114.241/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 113.107.57.104/32 -p tcp -m tcp -m multiport --dports 21 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 183.131.116.201/32 -p tcp -m tcp -m multiport --dports 21 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 124.228.90.81/32 -p tcp -m tcp -m multiport --dports 21 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 183.134.16.90/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 183.136.217.10/32 -m comment --comment "tot CDN FTP, WangSu" -j ACCEPT 
-A OUTPUT -d 119.28.65.174/32 -p tcp -m tcp -m multiport --dports 8731 -m comment --comment " to rsync for mmasg" -j ACCEPT 
-A OUTPUT -d 122.246.3.203/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.219.107/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 122.228.251.113/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 180.101.217.196/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 122.246.3.111/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.219.71/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 180.101.217.205/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 58.216.106.208/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.218.214/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 58.216.106.210/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.218.203/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.218.203/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 180.101.217.119/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 180.101.217.196/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 58.216.106.208/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 180.101.217.205/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 180.101.217.115/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 58.216.106.210/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.219.107/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.218.214/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 221.228.219.71/32 -m comment --comment "tot CDN DianLian" -j ACCEPT 
-A OUTPUT -d 106.3.35.124/32 -p tcp -m tcp --dport 8081 -m comment --comment "app upload xls file by lixiaoduan" -j ACCEPT 
-A OUTPUT -d 91.199.212.132/32 -p tcp -m tcp -m multiport --dports 80,443 -m comment --comment "security sign" -j ACCEPT 
-A OUTPUT -d 45.33.55.161/32 -m comment --comment "vps" -j ACCEPT 
-A OUTPUT -s 106.3.33.11/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "to new proxy web" -j ACCEPT 
-A OUTPUT -d 123.58.190.237/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirrors.163.com" -j ACCEPT 
-A OUTPUT -d 123.58.190.234/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirrors.163.com" -j ACCEPT 
-A OUTPUT -d 123.58.190.228/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirrors.163.com" -j ACCEPT 
-A OUTPUT -d 123.58.190.235/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirrors.163.com" -j ACCEPT 
-A OUTPUT -d 123.58.190.209/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirrors.163.com" -j ACCEPT 
-A OUTPUT -d 123.58.190.236/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirrors.163.com" -j ACCEPT 
-A OUTPUT -d 213.184.126.230/32 -p tcp -m multiport --dports 80,443 -m comment --comment "BASE: yum mirror.centos.org" -j ACCEPT 
-A OUTPUT -d 118.70.207.82/32 -m comment --comment "YueNan M3TD TEST" -j ACCEPT 
-A OUTPUT -d 42.112.21.69/32 -m comment --comment "YueNan M3TD TEST" -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 2222 -m comment --comment "YueNan M3TD" -j ACCEPT 
-A OUTPUT -d 222.73.95.102/32 -m comment --comment "m3td s3 dr" -j ACCEPT 
-A OUTPUT -d 106.75.102.2/32 -m comment --comment "ucloud monitor api" -j ACCEPT 
-A OUTPUT -d 183.131.215.23/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "allow to connect cdn" -j ACCEPT 
-A OUTPUT -d 115.231.128.181/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "allow to connect cdn" -j ACCEPT 
-A OUTPUT -d 183.131.132.99/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "allow to connect cdn" -j ACCEPT 
-A OUTPUT -d 183.131.132.98/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "allow to connect cdn" -j ACCEPT 
-A OUTPUT -d 115.231.128.182/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "allow to connect cdn" -j ACCEPT 
-A OUTPUT -d 183.131.215.22/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "allow to connect cdn" -j ACCEPT 
-A OUTPUT -d 180.101.25.28/32 -p tcp -m tcp -m multiport --dports 8080 -m comment --comment "allow to connect wangsucdn" -j ACCEPT 
-A OUTPUT -d 117.121.42.84/32 -p tcp -m tcp -m multiport --dports 22 -m comment --comment "access kunlun allm3 test server ip " -j ACCEPT 
-A OUTPUT -d 183.134.107.223/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A OUTPUT -d 183.134.107.224/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A OUTPUT -d 117.121.42.123/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A OUTPUT -d 192.30.255.113/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A OUTPUT -d 192.30.255.112/32 -p tcp -m tcp -m comment --comment "access kunlun allm3 client server ip " -j ACCEPT 
-A OUTPUT -d 61.147.225.59/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.51/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.52/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.54/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.57/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.58/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.56/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.53/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.50/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.147.225.55/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 218.76.93.56/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 123.183.166.27/32 -p tcp -m tcp -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 115.231.24.219/32 -p tcp -m tcp --dport 8080 -m comment --comment "access wangsu cdn log  " -j ACCEPT 
-A OUTPUT -d 61.153.108.220/32 -p tcp -m tcp --dport 21 -m comment --comment "access dl cdn" -j ACCEPT 
-A OUTPUT -d 183.134.107.200/32 -p tcp -m tcp --dport 21 -m comment --comment "access dl cdn" -j ACCEPT 
-A OUTPUT -d 202.107.192.189/32 -p tcp -m tcp --dport 80 -m comment --comment "access dianhun mail" -j ACCEPT 
-A OUTPUT -d 118.178.165.180/32 -p tcp -m tcp --dport 80 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 118.178.62.220/32 -p tcp -m tcp --dport 80 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 116.62.99.81/32 -p tcp -m tcp --dport 80 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 151.101.228.223/32 -p tcp -m tcp --dport 443 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 101.227.131.62/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 111.230.214.107/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 115.238.235.56/32 -p tcp -m tcp -m comment --comment "access Tencent cdn " -j ACCEPT 
-A OUTPUT -d 101.227.131.62/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 222.73.95.75/32 -p tcp -m tcp -m multiport --dports 3306,3307 -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 119.90.35.138/32 -p tcp -m tcp -m multiport --dports 3306,3307 -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 45.33.55.161/32 -p tcp -m tcp -m multiport --dports 8730 -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 106.3.33.11/32 -p tcp -m tcp -m multiport --dports 80 -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 23.101.1.101/32 -p tcp -m tcp -m multiport --dports 443 -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 52.91.66.170/32 -p tcp -m tcp -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 151.139.105.17/32 -p tcp -m tcp -m comment --comment "all to connect m3td database" -j ACCEPT 
-A OUTPUT -d 47.88.128.98/32 -p tcp -m tcp --dport 80 -m comment --comment "all connect aliyun oss" -j ACCEPT 
-A OUTPUT -d 140.205.155.65/32 -p tcp -m tcp --dport 443 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 443 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 116.213.213.184/32 -p tcp -m tcp --dport 22 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 107.150.103.202/32 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 120.27.117.220/32 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 116.213.213.128/32 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 124.243.197.81/32 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 119.90.35.237/32 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 121.40.60.241/32 -m comment --comment "aliyun cdn api" -j ACCEPT 
-A OUTPUT -d 47.88.128.166/32 -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -d 106.3.33.46/32 -p tcp -m tcp --dport 21 -m comment --comment "m3td update to plat" -j ACCEPT 
-A OUTPUT -d 115.231.24.219/32 -p tcp -m tcp --dport 80 -m comment --comment "wang su CDN CHECK" -j ACCEPT 
-A OUTPUT -d 222.73.95.104/32 -p tcp -m tcp --dport 80 -m comment --comment "to new zabbix" -j ACCEPT 
-A OUTPUT -d 103.28.213.16/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 112.90.157.46/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 112.91.135.64/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 113.17.171.198/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 116.31.97.141/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 117.158.93.167/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 117.21.234.62/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 117.21.234.63/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 117.21.234.66/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 117.21.234.80/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 120.192.86.169/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 120.192.86.172/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 121.14.164.81/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 14.215.74.200/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 14.215.74.202/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 171.80.111.40/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 171.80.111.43/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 218.60.15.10/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 218.76.198.208/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 220.194.207.169/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 220.194.207.170/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 42.81.11.94/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 59.108.136.34/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 60.169.5.74/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 60.211.182.118/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 61.156.241.113/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 61.156.241.65/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 61.160.243.125/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 61.160.243.136/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 101.126.60.165/32 -p tcp -m tcp --dport 80 -m comment --comment "to dilian" -j ACCEPT 
-A OUTPUT -d 103.56.116.50/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 111.11.152.230/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 111.11.197.53/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 112.253.19.169/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 112.84.104.46/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 113.5.251.117/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 115.231.158.71/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 115.231.84.163/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 117.169.4.184/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 117.27.241.66/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 119.84.111.24/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 120.221.23.251/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 121.18.230.87/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 122.136.46.126/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 122.138.54.71/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 122.143.27.213/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 122.228.22.44/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 122.228.22.45/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 124.165.216.181/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 124.167.232.94/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 150.138.169.239/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 175.43.124.188/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 175.43.124.200/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 180.97.178.63/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 180.97.180.95/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 180.97.246.162/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 183.250.179.113/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 183.57.28.64/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 183.6.245.175/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 202.98.156.47/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 203.130.55.34/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 203.130.56.136/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 209.9.209.11/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 218.60.109.194/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 218.75.225.56/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 218.87.111.200/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 218.92.221.67/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 218.92.221.70/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 218.92.226.79/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 219.144.69.195/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 220.162.97.165/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 220.165.142.43/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 220.194.203.61/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 220.243.193.133/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 222.186.17.121/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 222.186.17.122/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 222.218.45.211/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 222.218.45.212/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 222.243.110.51/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 36.250.227.46/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 36.42.32.241/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 58.216.22.40/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 58.220.6.78/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 58.229.157.168/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 58.51.150.52/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 58.51.150.53/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 59.47.129.49/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 59.56.30.226/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 60.221.213.149/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 60.222.223.102/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.130.25.247/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.136.211.98/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.163.161.100/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.167.54.106/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.188.191.86/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.53.234.154/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.54.219.100/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 61.54.84.171/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 70.39.191.87/32 -p tcp -m tcp --dport 80 -m comment --comment "to wangsu" -j ACCEPT 
-A OUTPUT -d 101.226.90.194/32 -p tcp -m tcp --dport 80 -m comment --comment "to tengxun" -j ACCEPT 
-A OUTPUT -d 101.226.233.164/32 -p tcp -m tcp --dport 80 -m comment --comment "to tengxun" -j ACCEPT 
-A OUTPUT -d 101.226.211.139/32 -p tcp -m tcp --dport 80 -m comment --comment "to tengxun" -j ACCEPT 
-A OUTPUT -d 106.14.228.194/32 -p tcp -m tcp --dport 80 -m comment --comment "to alixun" -j ACCEPT 
-A OUTPUT -d 106.14.228.228/32 -p tcp -m tcp --dport 80 -m comment --comment "to alixun" -j ACCEPT 
-A OUTPUT -d 106.14.229.219/32 -p tcp -m tcp --dport 80 -m comment --comment "to alixun" -j ACCEPT 
-A OUTPUT -d 104.155.200.117/32 -p tcp -m tcp -m comment --comment "to cyzz viet cdn" -j ACCEPT 
-A OUTPUT -d 72.247.6.18/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.48/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.56/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.34/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.16/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.10/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.40/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.42/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.32/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.26/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.50/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 72.247.6.24/32 -p tcp -m tcp -m comment --comment "access ali cdn " -j ACCEPT 
-A OUTPUT -d 60.205.141.18/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -d 106.3.33.13/32 -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -d 69.16.187.22/32 -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -d 69.16.187.21/32 -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -d 69.16.162.8/32 -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -d 69.16.162.7/32 -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -d 205.185.196.8/32 -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -d 205.185.196.7/32 -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -d 115.231.24.219/32 -p tcp -m tcp -m multiport --dports 8080 -m comment --comment "update cdn" -j ACCEPT 
COMMIT
# Completed on Fri Dec 15 15:17:55 2017
